@@ -10,8 +10,6 @@
       <string>@SBIN_INSTALL_DIR@/@PROJECT_NAME@</string>
       <string>--bind</string>
       <string>7654</string>
-      <string>--no-handler</string>
-      <string>lighttpd.*</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
